OBRA-13: adding tenancy and workspace managing.
